msqa/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-green-test
  name: blue-green-test
  namespace: ms-blue-green
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: blue-green-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
