msqa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: '0'
    external-dns.alpha.kubernetes.io/set-identifier: blue-blue-green-test
  labels:
    app: blue-green-test
  name: blue-green-test-internal-microservices
  namespace: ms-blue-green
spec:
  ingressClassName: internal-microservices
  rules:
  - host: blue-blue-green-test.ppay.me
    http:
      paths:
      - backend:
          service:
            name: blue-green-test
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: blue-green-test.ppay.me
    http:
      paths:
      - backend:
          service:
            name: blue-green-test
            port:
              number: 80
        path: /
        pathType: Prefix
